--- a/soft-skills.Rmd
+++ b/soft-skills.Rmd
@@ -9,73 +9,94 @@ output: revealjs::revealjs_presentation
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-<!-- TODO: Check reveal works -->
 
+<!-- Wherever I say you, I mean me -->
 
-## Why are you here?
+## Why did your employer hire you?
 
- - You were hired because you have skills that your employer does not have
- 
+ - They hired you because they have problems that they think you can solve
+ - When you get hired you realize that the biggest problems are the ones they couldn't even recognize!
+
 
 <aside class="notes">
  - Don't assume that anyone else knows what you are talking about
  - Others may not understand your value until you show it
-</notes>
+</aside>
 
+## How do get better at solving problems?
 
-## Data science and data engineering
+ - Practice!
+ - Effort * Time = Productivity
 
- - You will likely see both types of projects in your career
- - **Data science:** You are attempting to predict or explain something
- - **Data engineering:** You are supporting a data science project by making data or results more accessible to others
+<aside class ="note">
+ - This is the only LaTeX in this presentation 
+</aside>
 
+<!-- Cite Deep Work Here -->
+ - Think about how long you were able to work on a project without losing focus
+ - Your goal should be maximize that amount of time
 
-## Data engineering projects
+## Optimizing for Time
 
- - Usually instrastructure projects
- - These projects are more complicated than you expect with a lot of buy-in
+ - First, start tracking your time (I use 30 minute increments)
+ - Remove everything from your phone that distracts you (even your work Slack)
+ - Automate whatever you can
  
+## The Pomodoro Method
 
-## Common Data Engineering Pitfalls
-
- - Don't overengineer: The people who use your work don't care about the tech stack
-
-
-## Data science projects
-
- - There is no guarentee that what you are trying will work
+ - I use the Pomodoro technique
+ - Spend 25 minutes do a single thing without breaking your concentration
+ - Rest for 5 minutes
 
 
-## Common Data Science Pitfalls
+<!-- Talk about the amount of Pomodoro
+
+## What should I automate?
+
+ - Think about the tasks you do when you had a bad night's rest (low effort)
+ - Bonus points if it's something that a lot of your co-workers complain about
+
+<!-- Add that silly chart here -->
+
+## What about meetings?
+
+ - If you are invited to a meeting, ask for an agenda. Come prepared and arrive on time.
+ - Try to minimize the number of people in meetings to just stakeholders
+ - If someone is checking their emails for most of the meeting, then the meeting should have been an email
+
+## Optimizing for Effort
+
+ - If you aren't sleeping, eating well or exercising regularly, you won't have much energy
+ - Trying to push yourself without taking of your yourself
+ - Know when to stop for the day without feeling guilty about it (For me it's 5 hours of deep work or 6pm)
+
+<aside class="note">
+ - I used to be very bad at this in university
+</aside>
+
+## Am I putting my effort into the right project?
+
+   1. Is there some off-the-shelf product that would cost less than developing something in house?
+   2. How will I know if a project isn't working?
+   3. What are the maintainance costs after I finish this project?
+
+## Planning
+
+ - Humans are very bad it this
+ - Hope you've been tracking your time!
+ - My rule of thumb: break a project into small tasks (should take 2 to 4 hours to complete) then double your gut feeling on tasks you haven't tracked before
+
+
+## Common Data Science Project Pitfalls
 
  - You don't have the data to answer the question
  - You spent too much time polishing a model of little value
  - Bugs in data science projects are hard to find and squash
 
-
-## Planning
- - Assume that something will go wrong
- - Be clear of your project's trade-offs 
-
- 
-## Personal Productivity
-
- - I use the Pomodoro technique
- - Spend 25 minutes do a single thing without looking at your phone
- - Rest for 5 minutes
-
-
 ## Setting Expectations
 
  - Planning software is extremely difficult
  - Planning machine learning is even harder
-
-## Minimize Meetings
-
- - Talk to your manager
- - Demand an agenda before accepting a meeting
- - Block off parts of your calendar for work
-
 
 ## Leave Time to Learn
 
@@ -87,3 +108,6 @@ knitr::opts_chunk$set(echo = TRUE)
  - The Personal MBA by Josh Kaufman
  - Soft Skill by John Sonmez
  - The Manager's Path by Camille Fournier
+
+
+## Thesis 
